# auratest

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
auratest/: __init__.py  assertions.py  engine.py  exceptions.py
tests/: test_assertions.py
